trying to add python file

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 
-    <img src='https://i.pinimg.com/236x/5e/9c/06/5e9c06a6b69a3b4518038c030466e3e3--carolina-blue-carolina-girls.jpg?b=t' alt='unc mascot'>
+   <!-- <img src='https://i.pinimg.com/236x/5e/9c/06/5e9c06a6b69a3b4518038c030466e3e3--carolina-blue-carolina-girls.jpg?b=t' alt='unc mascot'>-->
+    <img src="https://i.pinimg.com/236x/5e/9c/06/5e9c06a6b69a3b4518038c030466e3e3--carolina-blue-carolina-girls.jpg?b=t" alt="Smiley face" width="5" height="5">
 
-
-    <p>paragraph 1 <br />
+    <p>paragrddddddddddddddddddddddddddph 1 <br />
         paragraph 1 continued <br />
         <br />
     </p>
